# sphinx-scale

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.py
demos/needs_doxygen_breathe/: conf.py  index.rst
demos/needs_doxygen_breathe/code/: doxygen_example.dox  doxygen_example.hpp
demos/needs_external_data/: conf.py  index.rst  needs.json
demos/nested_needs/: conf.py  index.rst
demos/test_demo/: conf.py  index.rst
docs/: conf.py  index.rst  requirements.txt  usage.rst
docs/_static/: custom.css
docs/demos/: index.rst
docs/needs_templates/: demo.need  post_demo.need  post_problem.need  post_solution.need  pre_scale.need  pre_solution.need
docs/problems/: api.rst  index.rst  sphinx_needs.rst
docs/roles/: index.rst  sw_developer.rst
docs/solutions/: api.rst  index.rst  sphinx_needs.rst
docs/tools/: documentation.rst  index.rst  sphinx.rst
